<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:orderInCategory="1"
        app:showAsAction="always"/>

    <item
        android:id="@+id/favourites"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favourites"
        android:orderInCategory="2"
        app:showAsAction="always"/>

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile"
        android:orderInCategory="3"
        app:showAsAction="always"/>

</menu>