<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/rowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:background="@color/dark3"
                android:contentDescription="@string/image"
                android:src="@drawable/restaurant" />


            <ImageView
                android:id="@+id/favouriteIcon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_above="@+id/name"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:contentDescription="@string/image"
                android:focusable="true"
                android:src="@drawable/ic_baseline_star_outline_24" />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView"
                android:drawablePadding="5dp"
                android:text="@string/name"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_baseline_food_bank_24" />


            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:text="@string/address"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_baseline_location_on_24" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/address"
                android:layout_marginTop="10dp"
                android:drawablePadding="5dp"
                android:text="@string/price"
                android:textSize="18sp"
                app:drawableLeftCompat="@drawable/ic_baseline_attach_money_24" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>
</layout>